--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ and open the template in the editor.
         <section id="recent-works">
             <div class="container">
                 <div class="row">
+                    <div class="col-md-3"><div class="row"><img src = "images/pic.jpg" style="height: 140px; width: 150px;"></div><h2>Sara Nasr</h2><br><p>Software Engineer</p></div>
                     <div class="col-md-3">
                         <h3>My Latest Project</h3>
                         <p>Here are my projects starting from current to past.</p>
@@ -90,7 +91,7 @@ and open the template in the editor.
                         </div>
                         <p class="gap"></p>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-md-6">
                         <div id="scroller" class="carousel slide">
                             <div class="carousel-inner">
                                 <div class="item active">
@@ -208,6 +209,8 @@ and open the template in the editor.
                                 <blockquote>
                                     <p>Site went live.  Get rid of a few sections and changed all the files to html.</p>
                                     <small>Updated 3/26/2016</small>
+                                    <p>Updated Home, added picture of myself, name and title.</p>
+                                    <small>Updated 4/3/16</small>
                                 </blockquote>
                             </div>
                         </div>
