Updated About Me and index.html

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -55,7 +55,7 @@
             <div class="row">
                 <div class="col-sm-6">
                     <h1>About Me</h1>
-                    <p>My Name is Sara Nasr.  I currently go to San Francisco State and will graduate in May of 2016 with a degree in Computer Science.</p>
+                    <p>My Name is Sara Nasr.  I currently go to San Francisco State and will graduate in May of 2016 with a degree in Computer Science.  On my free time I enjoy playing video games, read and watch movies.</p>
                 </div>
             </div>
         </div>
@@ -75,6 +75,11 @@
             </div><!--/.col-sm-6-->
             <div class="col-sm-6">
                 <h2>My Skills</h2>
+                <ul style = "font-size: 18px;">
+                    <li>Ruby</li>
+                    <li>CSS</li>
+                    <li>HTML</li>
+                </ul>
                 <div>
                     
             </div><!--/.col-sm-6-->
