--- a/index.html
+++ b/index.html
@@ -202,15 +202,17 @@ and open the template in the editor.
                             <div class="col-md-6">
                                 <blockquote>
                                     <p>Added stuff to About me section, fixed navbar for Current/Past Projects and other projects.</p>
-                                    <small>Updated 3/25/2016</small>
-                                </blockquote>
-                            </div>
-                            <div class="col-md-6">
-                                <blockquote>
+                                    <small>Updated 3/25/2016</small><br>
                                     <p>Site went live.  Get rid of a few sections and changed all the files to html.</p>
                                     <small>Updated 3/26/2016</small>
                                     <p>Updated Home, added picture of myself, name and title.</p>
                                     <small>Updated 4/3/16</small>
+                                </blockquote>
+                            </div>
+                            <div class="col-md-6">
+                                <blockquote>
+                                    <p>Added some skills I have acquired throughout the years.</p>
+                                    <small>Updated 4/12/16</small>
                                 </blockquote>
                             </div>
                         </div>
