Updated About me, projects and main page

--- a/Current_PastProjects.html
+++ b/Current_PastProjects.html
@@ -47,7 +47,39 @@
             </div>
         </header>
         <!--Navbar ends-->
-        
-        <h1>Under Construction</h1>
+
+        <!--Change whole section-->
+        <section id="about-us" class="container">
+            <div class="row">
+                <div class="col-sm-6">
+
+                    <h1>Current</h1>
+                    <h2>My portfolio</h2>
+                    <small>December 2015-Recent <br>saranasr.com</small>
+                    <!--Figure out Angular.js and node.js-->
+                    <p>I created the website by myself. <br>Languages Used:  CSS, HTML</p>
+                    <!--Pictures of it from website-->
+
+                </div><!--/.col-sm-6-->
+                <div class="col-sm-6">
+                    <h1>Past Projects</h1>
+                    <h2>Easy Tables</h2>
+                    <small>September 2015-December 2015 <br>http://sfsuswe.com/~f15g03/</small>
+                    <p>This website was created in a small team.  I was one of the front-end developers on this project.  <br>Languages Used:  CSS, HTML, PHP</p>
+
+                    <h2>Deuces</h2>
+                    <small>September 2015 - December 2015</small>
+                    <p>This website was created in a small team.  My role was to create the interface and fixing compiling issues on the back-end.  <br>Languages Used:  CSS, Ruby, HTML</p>
+
+                    <h2>SFParking App</h2>
+                    <small>January 2015-May 2015</small>
+                    <p>This android application was made with a small team.  My role was a bit on the front-end but mainly on the back-end server portion.  <br>Languages Used:  Java</p>
+
+                    </div><!--/.col-sm-6-->
+                </div><!--/.row-->
+        </section><!--/#about-us-->
+
+
+
     </body>
 </html>
