--- a/index.html
+++ b/index.html
@@ -213,6 +213,10 @@ and open the template in the editor.
                                 <blockquote>
                                     <p>Added some skills I have acquired throughout the years.</p>
                                     <small>Updated 4/12/16</small>
+                                    <p>Updated About Me page with more skills, and more about me.</p>
+                                    <small>Updated 4/30/16</small>
+                                    <p>Added stuff into Projects</p>
+                                    <small>Updated 5/9/16</small>
                                 </blockquote>
                             </div>
                         </div>
