--- a/AboutMe.html
+++ b/AboutMe.html
@@ -55,7 +55,8 @@
             <div class="row">
                 <div class="col-sm-6">
                     <h1>About Me</h1>
-                    <p>My Name is Sara Nasr.  I currently go to San Francisco State and will graduate in May of 2016 with a degree in Computer Science.  On my free time I enjoy playing video games, read and watch movies.</p>
+                    <p>My Name is Sara Nasr.  I currently go to San Francisco State and will graduate in May of 2016 with a degree in Computer Science.  On my free time I enjoy playing video games, read and watch movies.<br>
+                    My favorite games are Dungeon Defenders, Stardew Valley, Plants Vs Zombies Garden Warfare 2, Fallout 4, Bioshock, Lego Games, Mortal Kombat, Street Fighter</p>
                 </div>
             </div>
         </div>
@@ -79,6 +80,14 @@
                     <li>Ruby</li>
                     <li>CSS</li>
                     <li>HTML</li>
+                    <li>Unity</li>
+                    <li>Javascript</li>
+                    <li>Java</li>
+                    <li>C/C+</li>
+                    <li>PHP</li>
+                    <li>Quickbooks</li>
+                    <li>HTML5</li>
+                    <li>CSS3</li>
                 </ul>
                 <div>
                     
