Added images and modified index.html, adding current and past projects

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@ and open the template in the editor.
         <script src="js/html5shiv.js"></script>
         <script src="js/respond.min.js"></script>
         <![endif]-->       
-        <link rel="shortcut icon" href="images/ico/favicon.ico">
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+        <link rel="shortcut icon" href="images/ico/16 copy.png">
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/144 copy.png">
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/114 copy.png">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/72 copy.png">
+        <link rel="apple-touch-icon-precomposed" href="images/ico/57 copy.png">
 
 
 
@@ -56,119 +56,18 @@ and open the template in the editor.
         <!--Navbar ends-->
 
 
-        <!--Main slide-->
-        <!--<section id="main-slider" class="no-margin">
-            <div class="carousel slide wet-asphalt">
-
-                <!--first slide 0-->
-                <!--<div class="carousel-inner">
-                    <div class="item active" style="background-image: url(images/slider/bg1.jpg)">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <div class="carousel-content centered">
-                                        <h2 class="animation animated-item-1">Sara Nasr</h2>
-                                        <p class="animation animated-item-2">Software Engineer</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div><!--/.item-->
-                <!--</div><!--/.carousel-inner-->
-            <!--</div><!--/.carousel-->
-        <!--</section><!--/#main-slider-->
-
         <section id="recent-works">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3"><div class="row"><img src = "images/pic.jpg" style="height: 140px; width: 150px;"></div><h2>Sara Nasr</h2><br><p>Software Engineer</p></div>
-                    <div class="col-md-3">
-                        <h3>My Latest Project</h3>
-                        <p>Here are my projects starting from current to past.</p>
-                        <div class="btn-group">
-                            <a class="btn btn-danger" href="#scroller" data-slide="prev"><i class="icon-angle-left"></i></a>
-                            <a class="btn btn-danger" href="#scroller" data-slide="next"><i class="icon-angle-right"></i></a>
-                        </div>
-                        <p class="gap"></p>
+                    <div class="col-md-4"><div class="row"><img src = "images/pic.jpg" style="height: 140px; width: 150px;"></div><h2>Sara Nasr</h2><br><p>Software Engineer</p></div>
+                    <div class ="col-md-4"><div class="row"><h1>Current project</h1></div>
+                        <div class="row">Portfolio Website</div>
                     </div>
-                    <div class="col-md-6">
-                        <div id="scroller" class="carousel slide">
-                            <div class="carousel-inner">
-                                <div class="item active">
-                                    <div class="row">                            
-                                        <div class="col-xs-4">
-                                            <div class="portfolio-item">
-                                                <div class="item-inner">
-                                                    <img class="img-responsive" src="images/portfolio/recent/item3.png" alt="">
-                                                    <h5>
-                                                        Trans Video Express
-                                                    </h5>
-                                                    <div class="overlay">
-                                                        <a class="preview btn btn-danger" title="Malesuada fames ac turpis egestas" href="images/portfolio/full/item1.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>                            
-                                        <div class="col-xs-4">
-                                            <div class="portfolio-item">
-                                                <div class="item-inner">
-                                                    <img class="img-responsive" src="images/portfolio/recent/item2.png" alt="">
-                                                    <h5>
-                                                        Android Phone App
-                                                    </h5>
-                                                    <div class="overlay">
-                                                        <a class="preview btn btn-danger" title="Malesuada fames ac turpis egestas" href="images/portfolio/full/item1.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div><!--/.row-->
-                                </div><!--/.item-->
-                                <div class="item">
-                                    <div class="row">
-                                        <div class="col-xs-4">
-                                            <div class="portfolio-item">
-                                                <div class="item-inner">
-                                                    <img class="img-responsive" src="images/portfolio/recent/item2.png" alt="">
-                                                    <h5>
-                                                        Reservation Site
-                                                    </h5>
-                                                    <div class="overlay">
-                                                        <a class="preview btn btn-danger" title="Malesuada fames ac turpis egestas" href="images/portfolio/full/item1.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-xs-4">
-                                            <div class="portfolio-item">
-                                                <div class="item-inner">
-                                                    <img class="img-responsive" src="images/portfolio/recent/item1.png" alt="">
-                                                    <h5>
-                                                        Ruby Site
-                                                    </h5>
-                                                    <div class="overlay">
-                                                        <a class="preview btn btn-danger" title="Malesuada fames ac turpis egestas" href="images/portfolio/full/item1.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>                            
-                                        <div class="col-xs-4">
-                                            <div class="portfolio-item">
-                                                <div class="item-inner">
-                                                    <img class="img-responsive" src="images/portfolio/recent/item3.png" alt="">
-                                                    <h5>
-                                                        Parking App
-                                                    </h5>
-                                                    <div class="overlay">
-                                                        <a class="preview btn btn-danger" title="Malesuada fames ac turpis egestas" href="images/portfolio/full/item1.jpg" rel="prettyPhoto"><i class="icon-eye-open"></i></a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div><!--/.item-->
-                            </div>
-                        </div>
+                    <div class="col-md-4"><div class="row"><h1>Past Projects</h1></div>
+                        <div class="row">Online Retail Database Project</div>
+                        <div class="row"><a href="http://sfsuswe.com/~f15g03/">Easytable</a></div>
+                        <div class="row">Deuces</div>
+                        <div class="row">SFParking App</div>
                     </div>
                 </div><!--/.row-->
             </div>
@@ -217,6 +116,12 @@ and open the template in the editor.
                                     <small>Updated 4/30/16</small>
                                     <p>Added stuff into Projects</p>
                                     <small>Updated 5/9/16</small>
+                                </blockquote>
+                            </div>
+                             <div class="col-md-6">
+                                <blockquote>
+                                    <p>Fixed up home page, added list of projects.</p>
+                                    <small>Updated 5/30/16</small>
                                 </blockquote>
                             </div>
                         </div>
