Added a project in past projects

--- a/Current_PastProjects.html
+++ b/Current_PastProjects.html
@@ -15,11 +15,11 @@
         <script src="js/html5shiv.js"></script>
         <script src="js/respond.min.js"></script>
         <![endif]-->       
-        <link rel="shortcut icon" href="images/ico/favicon.ico">
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+        <link rel="shortcut icon" href="images/ico/16 copy.png">
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/144 copy.png">
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/114 copy.png">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/72 copy.png">
+        <link rel="apple-touch-icon-precomposed" href="images/ico/57 copy.png">
 
     </head>
     <body>
@@ -63,6 +63,10 @@
                 </div><!--/.col-sm-6-->
                 <div class="col-sm-6">
                     <h1>Past Projects</h1>
+                    <h2>Online Retail Database Project</h2>
+                    <small>January 2016-May 2016</small>
+                    <p>This website was created in a small team.  I was one of the main front-end and user interface developer on this project.  <br>Languages Used: MySQL, CSS, HTML, PHP</p>
+                    
                     <h2>Easy Tables</h2>
                     <small>September 2015-December 2015 <br>http://sfsuswe.com/~f15g03/</small>
                     <p>This website was created in a small team.  I was one of the front-end developers on this project.  <br>Languages Used:  CSS, HTML, PHP</p>
@@ -75,8 +79,8 @@
                     <small>January 2015-May 2015</small>
                     <p>This android application was made with a small team.  My role was a bit on the front-end but mainly on the back-end server portion.  <br>Languages Used:  Java</p>
 
-                    </div><!--/.col-sm-6-->
-                </div><!--/.row-->
+                </div><!--/.col-sm-6-->
+            </div><!--/.row-->
         </section><!--/#about-us-->
 
 
