--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ and open the template in the editor.
                             </div>
                              <div class="col-md-6">
                                 <blockquote>
-                                    <p>Fixed up home page, added list of projects.</p>
+                                    <p>Fixed up home page, added list of projects, added a project to past project</p>
                                     <small>Updated 5/30/16</small>
                                 </blockquote>
                             </div>
